--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,4 @@
 {
-    "version": "0.2.0",
     "configurations": [
         {
             "name": "C/C++: g++.exe build and debug active file",
@@ -12,7 +11,7 @@
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\MinGW\\bin\\gdb.exe",
+            "miDebuggerPath": "C:\\msys64\\ucrt64\\bin\\gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
@@ -27,5 +26,6 @@
             ],
             "preLaunchTask": "C/C++: g++.exe build active file"
         }
-    ]
+    ],
+    "version": "2.0.0"
 }
